--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
   "keywords": [
     "yii2",
     "extension",
-    "orm"
   ],
   "license": "MIT",
   "authors": [
@@ -16,7 +15,7 @@
   ],
   "require": {
     "yiisoft/yii2": ">=2.0.13",
-    "kartik-v/yii2-widget-select2": "*"
+    "kartik-v/yii2-widget-select2": "~2.1"
   },
   "autoload": {
     "psr-4": {
